# oz_Django

./: orm.ipynb
Data_Analysis/: Day7_task.ipynb  Numpy.ipynb  Pandas.ipynb
Machine-Learning/: Titanic.ipynb  machine_learning.ipynb
membership/membership_project/: db.sqlite3  pyproject.toml
membership/membership_project/accounts/: admin.py  models.py
membership/membership_project/accounts/migrations/: 0001_initial.py
membership/membership_project/addresses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
membership/membership_project/addresses/migrations/: 0001_initial.py
membership/membership_project/common/: models.py
membership/membership_project/membership_project/: settings.py  urls.py
oz_django/: db.sqlite3  pyproject.toml
oz_django/boards/: admin.py  models.py
oz_django/boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
oz_django/common/: models.py
oz_django/config/: settings.py  urls.py
oz_django/feeds/: models.py  serializers.py  tests.py  urls.py  views.py
oz_django/reviews/: models.py  tests.py  urls.py  views.py
oz_django/users/: admin.py  models.py  serializers.py  urls.py  views.py
oz_django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
