[tool.poetry]
name = "membership-project"
version = "0.1.0"
description = ""
authors = ["Autumn-eul <dlrkdmf1052@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
